# SecureTransaction

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/adapters/inbound/http/: exception_handlers.py
app/adapters/inbound/http/endpoints/: fraud_assessment_endpoint.py  fraud_decision_endpoint.py  fraud_history_endpoint.py  health_check_endpoint.py
app/adapters/inbound/http/models/: fraud_assessment_request.py  fraud_assessment_response.py  fraud_decision_response.py  fraud_history_response.py
app/adapters/outbound/: config.py
app/adapters/outbound/logging/: logger.py
app/adapters/outbound/ml/: fraud_scoring_service.py  model_loader.py
app/adapters/outbound/persistence/: database.py  models.py
app/adapters/outbound/persistence/repositories/: fraud_decision_repository.py  transaction_repository.py
app/application/: dtos.py
app/application/use_cases/: assess_fraud_risk_use_case.py  retrieve_fraud_decision_use_case.py  retrieve_fraud_history_use_case.py
app/composition/: dependency_registry.py
app/domain/: exceptions.py
app/domain/entities/: fraud_decision.py  transaction.py
app/domain/ports/: fraud_decision_repository_port.py  fraud_scoring_port.py  transaction_repository_port.py
app/domain/services/: fraud_assessment_service.py
app/domain/value_objects/: merchant_id.py  transaction_amount.py  transaction_id.py  user_id.py
scripts/: train_model.py
