[project]
name = "securetransaction-api"
version = "1.0.0"
description = "Production-grade fraud detection API using FastAPI and Hexagonal Architecture"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "psycopg[binary]>=3.1.0",
    "numpy>=1.26.0,<2.0",
    "pandas>=2.0.0",
    "kagglehub>=0.2.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "joblib==1.3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

